--- a/ESRestSearch/pom.xml
+++ b/ESRestSearch/pom.xml
@@ -47,16 +47,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.znv</groupId>
-            <artifactId>FSSHttpSearch-client</artifactId>
-            <version>4.0</version>
-        </dependency>
-        <!--<dependency>
-            <groupId>com.znv</groupId>
-            <artifactId>fsssdk</artifactId>
-            <version>3.0</version>
-        </dependency>-->
-        <dependency>
             <groupId>org.apache.phoenix</groupId>
             <artifactId>phoenix</artifactId>
             <version>4.9.0-HBase-1.2</version>
@@ -68,6 +58,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
+
         <!-- c3p0 -->
         <dependency>
             <groupId>com.mchange</groupId>
