--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -15,12 +15,6 @@
     </properties>
 
     <dependencies>
-        <!--<dependency>
-            <groupId>com.znv</groupId>
-            <artifactId>FSSHttpSearch-client</artifactId>
-            <version>4.0</version>
-        </dependency>-->
-
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
@@ -104,6 +98,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
             <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
