--- a/Jersey_Shiro_Demo/pom.xml
+++ b/Jersey_Shiro_Demo/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>Jersey_Shiro_Demo</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Jersey_Shiro_Demo</name>
+    <name>JerseyShiroDemo</name>
     <url>http://maven.apache.org</url>
 
     <properties>
