--- a/KafkaToSensetime/src/main/resources/producer.properties
+++ b/KafkaToSensetime/src/main/resources/producer.properties
@@ -1,7 +1,7 @@
 bootstrap.servers=10.45.157.119:9092
 acks=-1
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=com.znv.kafka.common.KafkaAvroSerializer
+value.serializer=com.znv.kafka.kafka.common.KafkaAvroSerializer
 batch.size=524288
 retries=3
 request.timeout.ms=30000
