--- a/ZNVKafka/producer.properties
+++ b/ZNVKafka/producer.properties
@@ -12,7 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-# see kafka.producer.ProducerConfig for more details
+# see kafka.kafka.producer.ProducerConfig for more details
 ############################# Producer Basics #############################
 # list of brokers used for bootstrapping knowledge about the rest of the cluster
 # format: host1:port1,host2:port2 ...
@@ -24,14 +24,14 @@ bootstrap.servers=znv.bfw02:6667,znv.bfw03:6667
 # name of the partitioner class for partitioning events; default partition spreads data randomly
 #partitioner.class=
 # specifies whether the messages are sent asynchronously (async) or synchronously (sync)
-#producer.type=sync
-#The number of acknowledgments the producer requires the leader to have received before considering a request complete
+#kafka.producer.type=sync
+#The number of acknowledgments the kafka.producer requires the leader to have received before considering a request complete
 acks=1
 #Serializer class for key that implements the Serializer interface
-#key.serializer=com.znv.iCapProducerApi.common.KafkaAvroSerializer
+#key.serializer=com.znv.iCapProducerApi.kafka.common.KafkaAvroSerializer
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 #Serializer class for value that implements the Serializer interface.
-value.serializer=com.znv.kafka.common.KafkaAvroSerializer
+value.serializer=com.znv.kafka.kafka.common.KafkaAvroSerializer
 #value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 batch.size=524288
 #send.buffer.bytes=409600
@@ -47,14 +47,14 @@ compression.codec=none
 # allow topic level compression
 #compressed.topics=
 ############################# Async Producer #############################
-# maximum time, in milliseconds, for buffering data on the producer queue 
+# maximum time, in milliseconds, for buffering data on the kafka.producer queue
 #queue.buffering.max.ms=
-# the maximum size of the blocking queue for buffering on the producer
+# the maximum size of the blocking queue for buffering on the kafka.producer
 #queue.buffering.max.messages=
 # Timeout for event enqueue:
 # 0: events will be enqueued immediately or dropped if the queue is full
 # -ve: enqueue will block indefinitely if the queue is full
 # +ve: enqueue will block up to this many milliseconds if the queue is full
 #queue.enqueue.timeout.ms=
-# the number of messages batched at the producer
+# the number of messages batched at the kafka.producer
 #batch.num.messages=
