--- a/fss-search-sdk/fss-common/src/main/resources/fss.properties
+++ b/fss-search-sdk/fss-common/src/main/resources/fss.properties
@@ -87,8 +87,8 @@ fss.kafka.topic.alarm.name=fss-alarm-v1-1-production
 fss.kafka.topic.alarm.partition.num=10
 fss.kafka.topic.alarm.replication.num=1
 #consumer–≈œ¢
-fss.kafka.consumer.web.group.id=consumer_fss_web_V1_1_001
-fss.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_1_001
+fss.kafka.kafka.consumer.web.group.id=consumer_fss_web_V1_1_001
+fss.kafka.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_1_001
 #config of es template
 fss.es.index.history.prefix=history_fss_data_v1_1
 fss.es.index.history.type=history_data
