--- a/fss-search-sdk/fss-search-client/es-search-client/src/main/resources/fss.properties
+++ b/fss-search-sdk/fss-search-client/es-search-client/src/main/resources/fss.properties
@@ -88,8 +88,8 @@ fss.kafka.topic.alarm.name=fss-alarm-v1-2-1-production
 fss.kafka.topic.alarm.partition.num=10
 fss.kafka.topic.alarm.replication.num=1
 #consumer–≈œ¢
-fss.kafka.consumer.web.group.id=consumer_fss_web_V1_2_001
-fss.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_2_002
+fss.kafka.kafka.consumer.web.group.id=consumer_fss_web_V1_2_001
+fss.kafka.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_2_002
 
 #config of es template
 #history_fss_data_v1_2
