--- a/fss_restful/src/main/resources/fss.properties
+++ b/fss_restful/src/main/resources/fss.properties
@@ -65,8 +65,8 @@ fss.kafka.topic.alarm.name=fss-alarm_V1_1_2_20170707-production
 fss.kafka.topic.alarm.partition.num=10
 fss.kafka.topic.alarm.replication.num=1
 #consumer信息
-fss.kafka.consumer.web.group.id=consumer_fss_web_V1_1_2_001
-fss.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_1_2_001
+fss.kafka.kafka.consumer.web.group.id=consumer_fss_web_V1_1_2_001
+fss.kafka.kafka.consumer.streaming.group.id=consumer_fss_streaming_V1_1_2_001
 
 #config of es template
 #es任意搜索查询模板
