--- a/DubboSpringDemoConsumer/src/main/resources/application.properties
+++ b/DubboSpringDemoConsumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #web服务端口
 server.port=80
 #消费者名称
-dubbo.application.name=dubbo-consumer
+dubbo.application.name=dubbo-kafka.consumer
 #需要使用到提供者服务的包路径
 dubbo.scan.base-packages=com.yiworld.DubboSpringDemoConsumer
 #注册中心地址
