--- a/MyShop/MyShopServiceContentConsumer/src/main/resources/application.yml
+++ b/MyShop/MyShopServiceContentConsumer/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Spring boot application
 spring:
   application:
-    name: myshop-service-content-consumer
+    name: myshop-service-content-kafka.consumer
   thymeleaf:
     cache: false # 开发时关闭缓存,不然没法看到实时页面
     mode: LEGACYHTML5 # 用非严格的 HTML
@@ -20,11 +20,11 @@ services:
 # Dubbo Config properties
 dubbo:
   scan:
-    basePackages: com.yiworld.myshop.service.content.consumer
+    basePackages: com.yiworld.myshop.service.content.kafka.consumer
   ## ApplicationConfig Bean
   application:
-    id: myshop-service-content-consumer
-    name: myshop-service-content-consumer
+    id: myshop-service-content-kafka.consumer
+    name: myshop-service-content-kafka.consumer
   ## ProtocolConfig Bean
   protocol:
     id: dubbo
