--- a/SpringBootDemo/src/main/resources/application-dev.properties
+++ b/SpringBootDemo/src/main/resources/application-dev.properties
@@ -18,10 +18,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.com.wangzaiplus.test.mapper=debug
 
 # rabbitmq
-spring.rabbitmq.host=10.10.1.119
+spring.rabbitmq.host=10.10.1.36
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 # 开启confirms回调 P -> Exchange
 spring.rabbitmq.publisher-confirms=true
 # 开启returnedMessage回调 Exchange -> Queue
