--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -171,7 +171,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>main.Main</mainClass>
+                                    <mainClass>mongo.CopyFromDir</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
