--- a/YiworldServer/NettyServer/src/main/resources/application.yml
+++ b/YiworldServer/NettyServer/src/main/resources/application.yml
@@ -26,7 +26,7 @@ server:
   port: 8081
 spring:
   application:
-    name: cim-server
+    name: yiworld-server
   boot:
     admin:
       url: http://127.0.0.1:8888  # SpringAdmin 地址
